fixed width on header text was overflowing on mobile

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -358,7 +358,7 @@ header h2 {
 }
 
 header p {
-  width: 21.5em;
+  max-width: 21.5em;
 }
 
 header .logo {
